# logic

./: .gitignore  README.md  logic.cabal  stack.yaml
app/: Main.hs
src/: Eval.hs  Lexer.hs  Parser.hs  Syntax.hs
