name:                logic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/coffee-cup/logic#readme
license:             BSD3
license-file:        LICENSE
author:              Jake Runzer
maintainer:          jakerunzer@gmail.com
copyright:           2017 Jake Runzer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer, Syntax, Parser, Eval
  ghc-options:         -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , transformers
                     , parsec       >= 3.1 && < 3.2
                     , haskeline    >= 0.7 && < 0.8
  default-extensions:  NoMonomorphismRestriction,
                       OverloadedStrings
                       FlexibleContexts
  default-language:    Haskell2010

executable logic
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , logic
                     , text
                     , mtl
                     , transformers
                     , parsec       >= 3.1 && < 3.2
                     , haskeline    >= 0.7 && < 0.8
  default-extensions:  NoMonomorphismRestriction,
                       OverloadedStrings
                       FlexibleContexts
  default-language:    Haskell2010

test-suite logic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , logic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  NoMonomorphismRestriction,
                       OverloadedStrings
                       FlexibleContexts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/coffee-cup/logic
